Changing file structure to put core functions into their own folders

--- a/application/client/templates/header.html
+++ b/application/client/templates/header.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{pathFor 'postsList'}}"><i class="fa fa-th-large"></i> Central Control</a>
+        <a class="navbar-brand" href="{{pathFor 'dashboard'}}"><i class="fa fa-th-large"></i> Central Control</a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav">
