--- a/application/client/templates/menu.html
+++ b/application/client/templates/menu.html
@@ -3,7 +3,7 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-users"></i> New Interaction <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="#"><i class="fa fa-usd"></i> Sales</a></li>
+                <li><a href="{{pathFor 'newsale'}}"><i class="fa fa-usd"></i> Sales</a></li>
                 <li><a href="#"><i class="fa fa-wrench"></i> Support</a></li>
                 <li><a href="#"><i class="fa fa-user"></i> Customer Service</a></li>
             </ul>
