Moving interaction publish/subscribe/mongo stuff to a package

--- a/parts/interaction/client/templates/interaction.html
+++ b/parts/interaction/client/templates/interaction.html
@@ -6,6 +6,7 @@
         <li role="presentation"><a href="#">Choose A Plan</a></li>
         <li role="presentation"><a href="#">Disclosures</a></li>
     </ul>
+    {{createDate}} {{createUsername}}
 </template>
 
 <template name="wtSalesInteraction">
