removing style changes to navbar

--- a/application/client/templates/header.html
+++ b/application/client/templates/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-  <nav class="navbar navbar-custom" role="navigation">
+  <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{pathFor 'dashboard'}}"><i class="fa fa-th-large"></i> Central Control</a>
+        <a class="navbar-brand" href="{{pathFor 'dashboard'}}"><i class="fa fa-th-large"></i> WISP Tools</a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav">
