adding information so a sample can be deployed at wisptools.meteor.com

--- a/parts/interaction/client/templates/interaction.html
+++ b/parts/interaction/client/templates/interaction.html
@@ -32,10 +32,12 @@
         <li role="presentation"><a href="#">Choose A Plan</a></li>
         <li role="presentation"><a href="#">Disclosures</a></li>
     </ul>
-    <div class="jumbotron">
-	    {{> wtInteractionInputField context=this title='Name:' field='name'}}
-	    <br/>
-	    {{> wtInteractionInputField context=this title='Phone:' field='phone'}}
+    <div style="margin-top: 20px">
+	    <div class="jumbotron">
+		    {{> wtInteractionInputField context=this title='Name:' field='name'}}
+		    <br/>
+		    {{> wtInteractionInputField context=this title='Phone:' field='phone'}}
+	    </div>
     </div>
 </template>
 
