--- a/application/client/templates/include/access_denied.html
+++ b/application/client/templates/include/access_denied.html
@@ -1,5 +1,5 @@
 <template name="accessDenied">
   <div class="jumbotron">
-    <h2>Authorized Access Only!</h2>
+    <center><h2>Authorized Access Only!</h2></center>
   </div>
 </template>
