--- a/application/client/templates/menu.html
+++ b/application/client/templates/menu.html
@@ -1,13 +1,6 @@
 <template name="menu">
   {{#if currentUser}}
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-users menu-icon"></i> New Interaction <span class="caret"></span></a>
-      <ul class="dropdown-menu" role="menu">
-        <li><a href="{{pathFor 'newSale'}}"><i class="fa fa-usd menu-icon"></i> Sales</a></li>
-        <li><a href="#"><i class="fa fa-wrench menu-icon"></i> Support</a></li>
-        <li><a href="#"><i class="fa fa-user menu-icon"></i> Customer Service</a></li>
-      </ul>
-    </li>
+    {{> wtInteractionDropdownMenu}}
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-sitemap menu-icon"></i> Network <span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
