Moving interaction routes from parts to the package

--- a/packages/wisptools:interaction/client/templates/base.html
+++ b/packages/wisptools:interaction/client/templates/base.html
@@ -1,3 +1,7 @@
+<template name="wtNewInteraction">
+  {{> loading}}
+  {{gotoIdPage}}
+</template>
 
 <template name="wtInteraction">
   {{> UI.dynamic template=templateName}}
