--- a/packages/wisptools:interaction/client/templates/menu.html
+++ b/packages/wisptools:interaction/client/templates/menu.html
@@ -1,9 +1,9 @@
 <template name="wtInteractionDropdownMenu">
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="{{menu.icon_class}} menu-icon"></i> {{menu.text}} <span class="caret"></span></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="{{menu.icon}} menu-icon"></i> {{menu.text}} <span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
-        {{#each dropdownItems}}
-          <li><a href="/interaction/new/{{name}}"><i class="{{icon_class}} menu-icon"></i> {{text}}</a></li>
+        {{#each menu.dropdown}}
+          <li><a href="/interaction/new/{{name}}"><i class="{{icon}} menu-icon"></i> {{text}}</a></li>
         {{/each}}
       </ul>
     </li>
