--- a/packages/wisptools:interaction/client/templates/sales.html
+++ b/packages/wisptools:interaction/client/templates/sales.html
@@ -1,3 +1,23 @@
 <template name="wtInteractionSales">
   {{> wtInteractionPageWithTabs pages=pages}}
 </template>
+
+<template name="wtInteractionSalesQuestions">
+  <div role="tabpanel" class="tab-pane" id="{{pageId}}">
+    <label class="standalone">{{interactionData.name}}, while we wait for the system to check coverage, may I ask you a few questions?</label>
+
+    {{> quickForm collection="WtInteraction" doc=interactionData schema=schema id=formId autosave=true buttonContent=false type="update"}}
+  </div>
+</template>
+
+<template name="wtInteractionSalesOrder">
+  <div role="tabpanel" class="tab-pane" id="{{pageId}}">
+    {{#if customerId}}
+      {{> wtCustomerEditForm id=interactionData.customerId}}
+    {{/if}}
+    {{#unless customerId}}
+      <button type="button" class="btn btn-primary" id="convert">Convert to Customer</button>
+    {{/unless}}
+    {{> quickForm collection="WtInteraction" doc=interactionData schema=schema id=formId autosave=true buttonContent=false type="update"}}
+  </div>
+</template>
