--- a/packages/wisptools:tower/client/templates/map.html
+++ b/packages/wisptools:tower/client/templates/map.html
@@ -6,4 +6,43 @@
   <div class="wt-tower-map-container">
     {{> googleMap name="towerMap" options=mapOptions}}
   </div>
+  {{> wtTowerEditFormModal}}
+</template>
+
+<template name="wtTowerEditFormModal">
+	<div class="modal fade in hide" id="wtTowerEditFormModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+					<div class="col-xs-12">
+						<form class="form-horizontal" role="form">
+							<div class="form-group">
+								<label class="col-xs-4 control-label">Tower Name</label>
+								<div class="col-xs-6">
+									<input type="text" class="form-control" name="name" value="title" />
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="col-xs-offset-4 col-xs-6">
+									<div class="checkbox">
+										<input type="checkbox" name="draggable" value="Y" checked="true"/> Draggable?' +
+									</div>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary">Save changes</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </template>
