Modal show/hide using Session

--- a/packages/wisptools:tower/client/templates/map.html
+++ b/packages/wisptools:tower/client/templates/map.html
@@ -10,7 +10,7 @@
 </template>
 
 <template name="wtTowerEditFormModal">
-	<div class="modal fade in hide" id="wtTowerEditFormModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal fade in hide" id="wtTowerEditFormModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="{{showing}}">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
