--- a/packages/wisptools:tower/client/templates/map.html
+++ b/packages/wisptools:tower/client/templates/map.html
@@ -8,14 +8,13 @@
   </div>
   {{> wtTowerEditFormModal}}
 </template>
-
 <template name="wtTowerEditFormModal">
-	<div class="modal fade in hide" id="wtTowerEditFormModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="{{showing}}">
+	<div class="modal fade" id="wtTowerEditFormModal" tabindex="-1" role="dialog" aria-labelledby="wtTowerEditFormModalLabel" aria-hidden="hide">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-					<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+					<h4 class="modal-title" id="wtTowerEditFormModal">Tower: {{towerName}}</h4>
 				</div>
 				<div class="modal-body">
 					<div class="row">
@@ -24,13 +23,13 @@
 							<div class="form-group">
 								<label class="col-xs-4 control-label">Tower Name</label>
 								<div class="col-xs-6">
-									<input type="text" class="form-control" name="name" value="title" />
+									<input type="text" class="form-control" name="name" value="{{towerName}}" />
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="col-xs-offset-4 col-xs-6">
 									<div class="checkbox">
-										<input type="checkbox" name="draggable" value="Y" checked="true"/> Draggable?' +
+										<input type="checkbox" name="draggable" value="Y" checked="{{towerDraggable}}"/> Draggable?
 									</div>
 								</div>
 							</div>
