--- a/packages/wisptools:tower/client/templates/map.html
+++ b/packages/wisptools:tower/client/templates/map.html
@@ -7,41 +7,57 @@
     {{> googleMap name="towerMap" options=mapOptions}}
   </div>
   {{> wtTowerEditFormModal}}
+  {{> wtTowerDraggable}}
 </template>
+
 <template name="wtTowerEditFormModal">
 	<div class="modal fade" id="wtTowerEditFormModal" tabindex="-1" role="dialog" aria-labelledby="wtTowerEditFormModalLabel" aria-hidden="hide">
+		<form class="form-horizontal" role="form">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-					<h4 class="modal-title" id="wtTowerEditFormModal">Tower: {{towerName}}</h4>
+					<h4 class="modal-title" id="wtTowerEditFormModal">{{towerName}}</h4>
 				</div>
 				<div class="modal-body">
 					<div class="row">
-					<div class="col-xs-12">
-						<form class="form-horizontal" role="form">
-							<div class="form-group">
-								<label class="col-xs-4 control-label">Tower Name</label>
-								<div class="col-xs-6">
-									<input type="text" class="form-control" name="name" value="{{towerName}}" />
-								</div>
-							</div>
-							<div class="form-group">
-								<div class="col-xs-offset-4 col-xs-6">
-									<div class="checkbox">
-										<input type="checkbox" name="draggable" value="Y" checked="{{towerDraggable}}"/> Draggable?
+						<div class="col-xs-12">
+								<div class="form-group">
+									<label class="col-xs-4 control-label">Name</label>
+									<div class="col-xs-6">
+										<input type="text" class="form-control" name="name" value="{{towerName}}" />
 									</div>
 								</div>
-							</div>
-						</form>
+								<div class="form-group">
+									<label class="col-xs-4 control-label">Latitude</label>
+									<div class="col-xs-6">
+										<input type="text" class="form-control" name="lat" value="{{towerLat}}" />
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-xs-4 control-label">Longitude</label>
+									<div class="col-xs-6">
+										<input type="text" class="form-control" name="lng" value="{{towerLng}}" />
+									</div>
+								</div>
+						</div>
 					</div>
-				</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
+					<button type="submit" class="btn btn-primary">Save changes</button>
 				</div>
 			</div>
+		</div>
+		</form>
+	</div>
+</template>
+
+<template name="wtTowerDraggable">
+	<div class="row-fluid">
+		<div class="col-xs-12">
+			<button class="pull-right btn btn-sm {{dragBtnClass}}">Drag {{dragBtnDisplay}}</button>
+			<h4 class="text-center {{dragTextBlock}}">You may now click and drag Towers to change the location</h4>
 		</div>
 	</div>
 </template>
