--- a/packages/wisptools:tower/client/css/style.css
+++ b/packages/wisptools:tower/client/css/style.css
@@ -1,5 +1,4 @@
 div.wt-tower-map-container {
-  width: 100%;
   height: 520px;
   padding: 1%;
   border: #ddd solid 1px;
@@ -9,4 +8,8 @@ div.wt-tower-map-container {
 div.wt-tower-title {
   color: #999;
   text-align: right;
+}
+
+button.wt-btn-control {
+  margin-top: 5px !important;
 }
