--- a/packages/wisptools:tower/client/templates/map.html
+++ b/packages/wisptools:tower/client/templates/map.html
@@ -3,11 +3,19 @@
     <h4>Infrastructure</h4>
   </div>
 
-  <div class="wt-tower-map-container">
+  <div class="wt-tower-map-container col-xs-11">
     {{> googleMap name="towerMap" options=mapOptions}}
   </div>
+	<div class="col-xs-1">
+		{{> wtTowerControls}}
+	</div>
   {{> wtTowerEditFormModal}}
   {{> wtTowerDraggable}}
+</template>
+
+<template name="wtTowerControls">
+	<button class="btn btn-sm {{dragBtnClass}} wt-btn-control" id="dragBtn">Drag {{dragBtnDisplay}}</button>
+	<button class="btn btn-sm btn-primary wt-btn-control" id="addTowerBtn">Add Tower</button>
 </template>
 
 <template name="wtTowerEditFormModal">
@@ -17,7 +25,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-					<h4 class="modal-title" id="wtTowerEditFormModal">{{towerName}}</h4>
+					<h4 class="modal-title" id="wtTowerEditFormModal">{{towerName "true"}}</h4>
 				</div>
 				<div class="modal-body">
 					<div class="row">
@@ -45,7 +53,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="submit" class="btn btn-primary">Save changes</button>
+					<button type="submit" class="btn btn-primary">{{btnContent}}</button>
 				</div>
 			</div>
 		</div>
@@ -56,7 +64,6 @@
 <template name="wtTowerDraggable">
 	<div class="row-fluid">
 		<div class="col-xs-12">
-			<button class="pull-right btn btn-sm {{dragBtnClass}}">Drag {{dragBtnDisplay}}</button>
 			<h4 class="text-center {{dragTextBlock}}">You may now click and drag Towers to change the location</h4>
 		</div>
 	</div>
