--- a/packages/wisptools:tower/client/templates/access_point.html
+++ b/packages/wisptools:tower/client/templates/access_point.html
@@ -1,53 +1,36 @@
 <template name="accessPoint">
+{{log}}
 	<div class="item">
 		<div class="form-group">
 			<label class="col-xs-4 control-label">Name</label>
 			<div class="col-xs-4">
-				<input type="text" class="form-control" name="ap[0][name]" value="{{name}}">
+				<input type="text" class="form-control" name="ap[][name]" value="{{name}}">
 			</div>
 		</div>
 		<div class="form-group">
 			<label class="col-xs-4 control-label">Azimuth</label>
 			<div class="col-xs-4">
-				<div class="input-group">
-					<input type="text" class="form-control" name="ap[0][azimuth]" value="{{azimuth}}">
-					<span class="input-group-addon">&deg;</span>
-				</div>
+				<input type="text" class="form-control" name="ap[][azimuth]" value="{{azimuth}}">
 			</div>
 		</div>
 		<div class="form-group">
 			<label class="col-xs-4 control-label">BeamWidth</label>
 			<div class="col-xs-4">
-				<div class="input-group">
-					<input type="text" class="form-control" name="ap[0][beamwidth]" value="{{beamwidth}}">
-					<span class="input-group-addon">&deg;</span>
-				</div>
+				<input type="text" class="form-control" name="ap[][beamwidth]" value="{{beamwidth}}">
 			</div>
 		</div>
 		<div class="form-group">
 			<label class="col-xs-4 control-label">Distance</label>
 			<div class="col-xs-4">
-				<div class="input-group">
-					<input type="text" class="form-control" name="ap[0][distance]" value="{{distance}}">
-					<span class="input-group-addon">ml</span>
-				</div>
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="col-xs-4 control-label">Frequency</label>
-			<div class="col-xs-4">
-				<div class="input-group">
-					<input type="text" class="form-control" name="ap[0][frequency]" value="{{frequency}}">
-					<span class="input-group-addon">MHz</span>
-				</div>
+				<input type="text" class="form-control" name="ap[][distance]" value="{{distance}}">
 			</div>
 		</div>
 		<div class="form-group">
 			<label class="col-xs-4 control-label">Color</label>
 			<div class="col-xs-4">
-				<select name="ap[0][color]" class="form-control simplecolorpicker">
+				<select class="simplecolorpicker" name="color">
 					{{#each colors}}
-						<option value="{{value}}" {{selectedColor value ..}}>{{label}}</option>
+						<option value="{{value}}">{{label}}</option>
 					{{/each}}
 				</select>
 			</div>
