--- a/packages/wisptools:tower/client/templates/edit_form.html
+++ b/packages/wisptools:tower/client/templates/edit_form.html
@@ -2,35 +2,56 @@
 	<!-- Bootstrap Modal Carousel, content of modal-body -->
 	<div id="myCarousel" class="carousel slide carousel-fit" data-interval="false">
 		<!-- Indicators -->
+		<!--
 		<ol class="carousel-indicators">
 			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 			<li data-target="#myCarousel" data-slide-to="1"></li>
 			<li data-target="#myCarousel" data-slide-to="2"></li>
 		</ol>
+		-->
 
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner">
 			<div class="item active">
-				One
+				<div class="form-group">
+					<label class="col-xs-4 control-label">Name</label>
+					<div class="col-xs-4">
+						<input type="text" class="form-control" name="name" value="{{towerName}}">
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-xs-4 control-label">Latitude</label>
+					<div class="col-xs-4">
+						<input type="text" class="form-control" name="lat" value="{{towerLat}}">
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-xs-4 control-label">Longitude</label>
+					<div class="col-xs-4">
+						<input type="text" class="form-control" name="lng" value="{{towerLng}}">
+					</div>
+				</div>
 			</div>
-			<div class="item">
-				Two
-			</div>
-			<div class="item">
-				Three
-			</div>
+			{{#each accessPoints}}
+				{{> accessPoint}}
+			{{/each}}
+			{{> accessPoint}}
 		</div>
+
 		<!-- Controls -->
+		<!--
 		<a class="left carousel-control" href="#myCarousel" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left"></span>
 		</a>
 		<a class="right carousel-control" href="#myCarousel" data-slide="next">
 			<span class="glyphicon glyphicon-chevron-right"></span>
 		</a>
+		-->
 	</div>
 
 	<!-- Bootstrap Modal -->
 	<div class="modal fade modal-fullscreen force-fullscreen" id="wtTowerEditFormModal" tabindex="-1" role="dialog" aria-labelledby="wtTowerEditFormModalLabel" aria-hidden="hide">
+		<form class="form-horizontal" role="form">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -41,8 +62,10 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="submit" class="btn btn-primary">{{btnContent}}</button>
 				</div>
 			</div>
 		</div>
+		</form>
 	</div>
 </template>
