Adding menu package and working on commission interface

--- a/application/client/templates/menu.html
+++ b/application/client/templates/menu.html
@@ -8,5 +8,6 @@
         <li><a href="#"><i class="fa fa-laptop menu-icon"></i> Customer Equipment</a></li>
       </ul>
     </li>
+    {{> wtMenu}}
   {{/if}}
 </template>
