--- a/packages/wisptools:powercode-commission/client/templates/users.html
+++ b/packages/wisptools:powercode-commission/client/templates/users.html
@@ -1,3 +1,18 @@
 <template name="wtPowercodeCommissionUsers">
-  <h1>Users</h1>
+  <table class="table table-striped">
+    <tbody>
+      <tr>
+        <th>Username</th>
+        <th>Name</th>
+        <th>Commission Type</th>
+      </tr>
+      {{#each userList}}
+        <tr>
+          <td>{{Username}}</td>
+          <td>{{Name}}</td>
+          <td></td>
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
 </template>
