--- a/packages/wisptools:powercode-commission/client/templates/users.html
+++ b/packages/wisptools:powercode-commission/client/templates/users.html
@@ -1,5 +1,5 @@
 <template name="wtPowercodeCommissionUsers">
-  <table class="table table-striped">
+  <table class="table table-striped table-bordered">
     <tbody>
       <tr>
         <th>Username</th>
