Made the AccessPoint data shown in the scroll

--- a/packages/wisptools:tower/client/templates/edit_form.html
+++ b/packages/wisptools:tower/client/templates/edit_form.html
@@ -32,9 +32,11 @@
 					</div>
 				</div>
 			</div>
-			{{#each accessPoints}}
-				{{> accessPoint}}
-			{{/each}}
+			{{#with tower}}
+				{{#each accesspoints}}
+					{{> accessPoint}}
+				{{/each}}
+			{{/with}}
 			{{> accessPoint}}
 		</div>
 
