--- a/packages/wisptools:interaction/client/css/style.css
+++ b/packages/wisptools:interaction/client/css/style.css
@@ -1,7 +1,6 @@
 div.interaction-content {
   padding: 3%;
   border: #ddd solid 1px;
-  border-top-style: none;
   clear: both;
   width: 100%;
 }
@@ -22,4 +21,18 @@ div.interaction-menu {
 label.standalone {
   margin-bottom: 30px;
 }
+
+
+@media (max-width: 767px) {
+  div.tab-page-content {
+    border-top-style: solid;
+  }
+}
+
+@media (min-width: 768px) {
+  div.tab-page-content {
+    border-top-style: none;
+  }
+}
+
 
