Adding running of the commission report

--- a/packages/wisptools:powercode-commission/client/templates/reports.html
+++ b/packages/wisptools:powercode-commission/client/templates/reports.html
@@ -16,7 +16,14 @@
           </div>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary" {{disabled}}>{{#unless running}}Run{{/unless}}{{#if running}}Running{{/if}}</button>
+      <div class="row">
+        <div class="col-md-2">
+          <button type="submit" class="btn btn-primary" {{disabled}}>{{#unless running}}Run{{/unless}}{{#if running}}Running{{/if}}</button>
+        </div>
+        <div class="col-md-10">
+          {{#if running}} {{> wtProgressBar percent=percentDone}} {{/if}}
+        </div>
+      </div>
     </form>
   </div>
 
@@ -28,20 +35,29 @@
     <table id="wtPowercodeCommissionReportTable" class="table table-striped table-bordered">
       <tbody>
         <tr>
-          <th>User</th>
+          <th>Sales Person</th>
+          <th>Date</th>
+          <th>Customer ID</th>
           <th>Customer</th>
+          <th>Description</th>
+          <th>Service Amount</th>
           <th>Commission Amount</th>
+          <th>Service Paid For</th>
         </tr>
         {{#each reportData}}
           <tr>
-            <td>{{user}}</td>
-            <td>{{customer}}</td>
-            <td>{{commission}}</td>
+            <td>{{SalesPerson}}</td>
+            <td>{{Date}}</td>
+            <td>{{CustomerID}}</td>
+            <td>{{CompanyName}}</td>
+            <td>{{Description}}</td>
+            <td align="right">{{Amount}}</td>
+            <td align="right">{{commission}}</td>
+            <td align="center">{{isPaidUp}}</td>
           </tr>
         {{/each}}
       </tbody>
     </table>
   {{/unless}}
-
-
 </template>
+
