fixing class names that broke commission types

--- a/packages/wisptools:powercode-commission/client/templates/reports.html
+++ b/packages/wisptools:powercode-commission/client/templates/reports.html
@@ -1,7 +1,7 @@
 <template name="wtPowercodeCommissionReports">
 
   <div class="jumbotron">
-    <form class="run-report">
+    <form class="run-comm-report">
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
