--- a/packages/wisptools:powercode-commission/client/templates/types.html
+++ b/packages/wisptools:powercode-commission/client/templates/types.html
@@ -5,7 +5,7 @@
   {{/each}}
 
 <div class="jumbotron">
-  <form class="form-inline run-comm-report">
+  <form class="form-inline add-type">
     <div class="form-group">
       <label>Name</label>
       <input type="text" class="form-control" name="typeName" value="">
