Changing Commission Type to Commission Group

--- a/packages/wisptools:powercode-commission/client/templates/users.html
+++ b/packages/wisptools:powercode-commission/client/templates/users.html
@@ -4,7 +4,7 @@
       <tr>
         <th>Username</th>
         <th>Name</th>
-        <th>Commission Type</th>
+        <th>Commission Group</th>
       </tr>
       {{#each userList}}
         <tr>
