--- a/packages/wisptools:powercode-extenet/client/templates/api.html
+++ b/packages/wisptools:powercode-extenet/client/templates/api.html
@@ -13,7 +13,22 @@
         <label>RESTful API Password</label>
         <input type="text" class="form-control" name="password" value="{{password}}">
       </div>
+      <div class="form-group">
+        <label>Staff as which SIMs Imported</label>
+        <select class="form-control" name="webuser">
+          {{#each webusers}}
+            {{> wtPowercodeExteNetAPIWebUsersOption}}
+          {{/each}}
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Default SIM Profile</label>
+        <input type="text" class="form-control" name="profile" value="{{profile}}">
+      </div>
       <button type="submit" class="btn btn-primary">Save</button>
     </form>
   {{/with}}
+</template>
+<template name="wtPowercodeExteNetAPIWebUsersOption">
+  <option value="{{WebUserID}}" {{selected WebUserID webuser}}>{{Username}}</option>
 </template>
