--- a/packages/wisptools:powercode-commission/client/templates/reports.html
+++ b/packages/wisptools:powercode-commission/client/templates/reports.html
@@ -3,10 +3,15 @@
   <div class="jumbotron">
     <form class="run-comm-report">
       <div class="row">
-        <div class="col-md-6">
+  <div class="col-md-6">
+          <div class="form-group">
+           {{> wtPowercodeCommissionReportSelect}}
+          </div>
+        </div>
+     <!--   <div class="col-md-6">
           <div class="form-group">
             <label>Start Date</label>
-            <input type="text" class="form-control" name="commStartDate" id="commStartDate" value="{{startDate}}">
+            <input type="text" class="form-control" name="" id="" value="{{startDate}}">
           </div>
         </div>
         <div class="col-md-6">
@@ -14,7 +19,7 @@
             <label>End Date</label>
             <input type="text" class="form-control" name="commEndDate" id="commEndDate" value="{{endDate}}">
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="row">
         <div class="col-md-2">
@@ -23,13 +28,13 @@
         <div class="col-md-10">
           {{#if running}} {{> wtProgressBar percent=percentDone}} {{/if}}
         </div>
-      </div>
+      </div> 
     </form>
   </div>
 
-  {{#unless haveData}}
+  {{#unless haveData}}  
     <div class="row">
-      <div class="col-md-10"><h3>Commission Report</h3><strong>{{startDate}} to {{endDate}}</strong></div>
+      <div class="col-md-10"><h3>Commission Report</h3></div>
     </div>
     <table id="wtPowercodeCommissionReportTable" class="table table-striped table-bordered">
       <tbody>
@@ -60,3 +65,11 @@
   {{/unless}}
 </template>
 
+<template name="wtPowercodeCommissionReportSelect">
+  <select class="form-control type-sel" name="commStartDate" id="commStartDate">
+    <option value="None">None</option>
+   {{#each typeList}}
+      <option>{{this}}</option>
+    {{/each}}
+  </select>
+</template> 
