--- a/packages/wisptools:roles/client/templates/users.html
+++ b/packages/wisptools:roles/client/templates/users.html
@@ -7,12 +7,18 @@
     <table id="wtRolesUserTable" class="table table-striped table-bordered"  >
       <tbody>
         <tr>
-          <th>Name</th>
+          <th>Email</th>
           <th>Role</th>
 	</tr>
         {{#each userList}}
           <tr>
-            <td>{{username}}</td>
+            <td>{{#each emails}}
+                    {{address}}
+                    {{/each}}
+                    
+                    {{services.google.email}}
+            
+            </td>
             <td>
              {{>wtRolesUsersSelect}}
             </td>
