--- a/packages/wisptools:roles/client/templates/users.html
+++ b/packages/wisptools:roles/client/templates/users.html
@@ -12,13 +12,7 @@
 	</tr>
         {{#each userList}}
           <tr>
-            <td>{{#each emails}}
-                    {{address}}
-                    {{/each}}
-                    
-                    {{services.google.email}}
-            
-            </td>
+            <td>{{username}}</td>
             <td>
              {{>wtRolesUsersSelect}}
             </td>
