adding function to show a particular tab

--- a/packages/wisptools:tab-page/client/templates/tabs.html
+++ b/packages/wisptools:tab-page/client/templates/tabs.html
@@ -28,6 +28,6 @@
 </template>
 
 <template name="wtTabPageTab">
-    <li role="presentation"><a href="#{{tabId}}" aria-controls="{{tabId}}" role="tab" data-toggle="pill">{{tabName}}</a></li>
+    <li role="presentation"><a href="#{{tabId}}" id="wt_tab_{{tabId}}" aria-controls="{{tabId}}" role="tab" data-toggle="pill">{{tabName}}</a></li>
 </template>
 
