--- a/packages/wisptools:roles/client/templates/users.html
+++ b/packages/wisptools:roles/client/templates/users.html
@@ -1,18 +1,19 @@
 <template name="wtRolesUser">
-
- 
-   <div class="row">
-  <!--    <div class="col-md-10"><h3>List of customers</h3></div> -->
-    </div>
     <table id="wtRolesUserTable" class="table table-striped table-bordered"  >
       <tbody>
         <tr>
           <th>Email</th>
           <th>Role</th>
-	</tr>
+        </tr>
         {{#each userList}}
           <tr>
-            <td>{{username}}</td>
+            <td>
+              {{username}}
+              {{#each emails}}
+                {{address}}
+              {{/each}}
+              {{services.google.email}}
+            </td>
             <td>
              {{>wtRolesUsersSelect}}
             </td>
@@ -20,12 +21,10 @@
         {{/each}}
       </tbody>
     </table>
-
 </template>
 
 <template name="wtRolesUsersSelect">
   <select class="form-control type-sel" width="auto">
-   
     {{#each typeList}}
       <option value={{roles}} {{selected name userType.roles}}>{{name}}</option>
     {{/each}}
