--- a/packages/wisptools:tower/client/templates/access_point.html
+++ b/packages/wisptools:tower/client/templates/access_point.html
@@ -25,6 +25,12 @@
 			</div>
 		</div>
 		<div class="form-group">
+			<label class="col-xs-4 control-label">Frequency</label>
+			<div class="col-xs-4">
+				<input type="text" class="form-control" name="ap[][frequency]" value="{{frequency}}">
+			</div>
+		</div>
+		<div class="form-group">
 			<label class="col-xs-4 control-label">Color</label>
 			<div class="col-xs-4">
 				<select class="simplecolorpicker" name="color">
