--- a/packages/wisptools:tower/client/templates/access_point.html
+++ b/packages/wisptools:tower/client/templates/access_point.html
@@ -38,7 +38,7 @@
 			<div class="col-xs-4">
 				<select class="simplecolorpicker" name="ap[][color]">
 					{{#each colors}}
-						<option value="{{value}}">{{label}}</option>
+						<option value="{{value}}" {{selected ../color}}>{{label}}</option>
 					{{/each}}
 				</select>
 			</div>
