--- a/packages/wisptools:tower/client/templates/edit_form.html
+++ b/packages/wisptools:tower/client/templates/edit_form.html
@@ -11,7 +11,7 @@
 		-->
 
 		<!-- Wrapper for slides -->
-		<div class="carousel-inner">
+		<div class="carousel-inner" style="min-height:300px;">
 			<div class="item active">
 				<div class="form-group">
 					<label class="col-xs-4 control-label">Name</label>
@@ -41,14 +41,14 @@
 		</div>
 
 		<!-- Controls -->
-		<!--
+		
 		<a class="left carousel-control" href="#myCarousel" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left"></span>
 		</a>
 		<a class="right carousel-control" href="#myCarousel" data-slide="next">
 			<span class="glyphicon glyphicon-chevron-right"></span>
 		</a>
-		-->
+		
 	</div>
 
 	<!-- Bootstrap Modal -->
