--- a/packages/wisptools:tower/client/templates/edit_form.html
+++ b/packages/wisptools:tower/client/templates/edit_form.html
@@ -11,7 +11,7 @@
 		-->
 
 		<!-- Wrapper for slides -->
-		<div class="carousel-inner" style="min-height:300px;">
+		<div class="carousel-inner">
 			<div class="item active">
 				<div class="form-group">
 					<label class="col-xs-4 control-label">Name</label>
