--- a/application/client/templates/menu.html
+++ b/application/client/templates/menu.html
@@ -5,7 +5,7 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-sitemap menu-icon"></i> Network <span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
         <li><a href="{{pathFor 'towerMap'}}"><i class="fa fa-hdd-o menu-icon"></i> Infrastructure</a></li>
-        <li><a href="#"><i class="fa fa-laptop menu-icon"></i> Customer Equipment</a></li>
+        <li><a href="{{pathFor 'managedRouter'}}"><i class="fa fa-laptop menu-icon"></i> Customer Equipment</a></li>
       </ul>
     </li>
   {{#if isInRole 'admin'}}
