--- a/application/client/templates/menu.html
+++ b/application/client/templates/menu.html
@@ -1,5 +1,5 @@
 <template name="menu">
-  {{#if currentUser}}
+  {{#if isInRole 'admin'}}
     {{> wtInteractionDropdownMenu}}
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-sitemap menu-icon"></i> Network <span class="caret"></span></a>
