--- a/packages/wisptools:powercode-commission/client/templates/reports.html
+++ b/packages/wisptools:powercode-commission/client/templates/reports.html
@@ -34,7 +34,10 @@
 
   {{#unless haveData}}  
     <div class="row">
-      <div class="col-md-10"><h3>Commission Report</h3></div>
+      <form class="download-report">
+        <div class="col-md-10"><h3>Commission Report</h3></div>
+        <div class="col-md-10"><button type="submit" class="btn btn-primary">Download</button></div>
+      </form>
     </div>
     <table id="wtPowercodeCommissionReportTable" class="table table-striped table-bordered">
       <tbody>
